--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,6 +292,7 @@ SET(system_include TRUE)
 IF( ${include_eigen} )
     pkgconfig_info(eigen ${system_include})
     IF( DEFINED eigen_prefix )
+        MESSAGE(STATUS "eigen_prefix is defined: ${eigen_prefix}")
         MESSAGE(FATAL_ERROR "include_eigen is true and eigen_prefix is defined")
     ENDIF( )
 ELSE( )
